5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4432/executions/1650_2729.log
== SUBMITION (2019-04-12 02:12:24) 
-- CODE:
a=int(input("numero a    "))
b=int(input("numero b    "))
c=a*b;d=a+b;e=b-a
if(c%2==o):
	print(d)
else:
	print(e)
-- EXECUTION TIME:
0.122289
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1650/2729/main.py", line 4, in <module>
    if(c%2==o):
NameError: name 'o' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 02:12:39) 
-- CODE:
a=int(input("numero a    "))
b=int(input("numero b    "))
c=a*b
d=a+b
e=b-a
if(c%2==o):
	print(d)
else:
	print(e)
-- EXECUTION TIME:
0.220419
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1650/2729/main.py", line 6, in <module>
    if(c%2==o):
NameError: name 'o' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 02:12:42) 
-- CODE:
a=int(input("numero a    "))
b=int(input("numero b    "))
c=a*b
d=a+b
e=b-a
if(c%2==o):
	print(d)
else:
	print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if(c%2==o):
NameError: name 'o' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 02:13:15) 
-- CODE:
a=int(input("numero a    "))
b=int(input("numero b    "))
c=a*b
d=a+b
e=b-a
if(c%2==0):
	print(d)
else:
	print(e)
-- EXECUTION TIME:
0.147227
-- TEST CASE 1:
---- input:
9
10
---- correct output:
19
---- user output:
19
-- TEST CASE 2:
---- input:
3
7
---- correct output:
4
---- user output:
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:01:54) 
-- CODE:
a=int(input("numero a    "))
b=int(input("numero b    "))
c=a*b
d=a+b
e=b-a
if(c%2==0):
	print(d)
else:
	print(e)
-- EXECUTION TIME:
0.183614
-- TEST CASE 1:
---- input:
9
10
---- correct output:
19
---- user output:
19
-- TEST CASE 2:
---- input:
3
7
---- correct output:
4
---- user output:
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 13:50:16) 
-- CODE:
a=int(input("numero a    "))
b=int(input("numero b    "))
c=a*b
d=a+b
e=b-a
if(c%2==0):
	print(d)
else:
	print(e)
-- EXECUTION TIME:
0.144125
-- TEST CASE 1:
---- input:
9
10
---- correct output:
19
---- user output:
19
-- TEST CASE 2:
---- input:
3
7
---- correct output:
4
---- user output:
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 13:54:26) 
-- CODE:
a=int(input("numero a    "))
b=int(input("numero b    "))
c=a*b
d=a+b
e=b-a
if(c%2==0):
	print(d)
else:
	print(e)
-- EXECUTION TIME:
0.140172
-- TEST CASE 1:
---- input:
9
10
---- correct output:
19
---- user output:
19
-- TEST CASE 2:
---- input:
3
7
---- correct output:
4
---- user output:
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 13:54:37) 
-- CODE:
a=int(input("numero a    "))
b=int(input("numero b    "))
c=a*b
d=a+b
e=b-a
if(c%2==0):
	print(d)
else:
	print(e)
-- EXECUTION TIME:
0.13106
-- TEST CASE 1:
---- input:
9
10
---- correct output:
19
---- user output:
19
-- TEST CASE 2:
---- input:
3
7
---- correct output:
4
---- user output:
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 01:37:16) 
-- CODE:
a=int(input("numero a    "))
b=int(input("numero b    "))
c=a*b
d=a+b
e=b-a
if(c%2==0):
	print(d)
else:
	print(e)
-- OUTPUT:
19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 01:37:35) 
-- CODE:
a=int(input("numero a    "))
b=int(input("numero b    "))
c=a*b
d=a+b
e=b-a
if(c%2==0):
	print(d)
else:
	print(e)
-- EXECUTION TIME:
0.149544
-- TEST CASE 1:
---- input:
9
10
---- correct output:
19
---- user output:
19
-- TEST CASE 2:
---- input:
3
7
---- correct output:
4
---- user output:
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 17:25:17) 
-- CODE:
a=int(input("numero a    "))
b=int(input("numero b    "))
c=a*b
d=a+b
e=b-a
if(c%2==0):
	print(d)
else:
	print(e)
-- EXECUTION TIME:
0.204153
-- TEST CASE 1:
---- input:
9
10
---- correct output:
19
---- user output:
19
-- TEST CASE 2:
---- input:
3
7
---- correct output:
4
---- user output:
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 17:27:30) 
-- CODE:
a=int(input("numero a    "))
b=int(input("numero b    "))
c=a*b
d=a+b
e=b-a
if(c%2==0):
	print(d)
else:
	print(e)
-- EXECUTION TIME:
0.170173
-- TEST CASE 1:
---- input:
9
10
---- correct output:
19
---- user output:
19
-- TEST CASE 2:
---- input:
3
7
---- correct output:
4
---- user output:
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
